更新参数解析方式，可通过指定 -d -o -i 等参数进行设置